[package]
name = "esp-wifi-hal"
version = "0.1.5"
authors = ["Frostie314159 <frostie.neuenhausen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "An experimental driver for the Wi-Fi peripheral on ESP32-series chips."
homepage = "https://esp32-open-mac.be/"
repository = "https://github.com/esp32-open-mac/esp-wifi-hal"

[dependencies]
esp-wifi-sys = "=0.8.1"
esp-hal = { version = "=1.0.0", features = ["unstable"] }
esp32 = { version = "0.39.0", optional = true, features = ["critical-section"] }
esp32s2 = { version = "0.30.0", optional = true, features = [
  "critical-section",
] }

# Embassy dependencies
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
embassy-time = "0.5.0"

static_cell = { version = "2.1.1" }
macro-bits = "0.1.5"
portable-atomic = { version = "1.11.1", default-features = false }
cfg-if = "1.0.1"
defmt-or-log = { version = "0.2.3", default-features = false }
defmt = { version = "1.0.1", optional = true }
bitfield-struct = "0.12.1"
log = { version = "0.4.28", optional = true }
critical-section = "1.2.0"
esp-phy = "0.1.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
esp32 = ["dep:esp32", "esp-hal/esp32", "esp-wifi-sys/esp32", "esp-phy/esp32"]
esp32s2 = ["dep:esp32s2", "esp-hal/esp32s2", "esp-wifi-sys/esp32s2", "esp-phy/esp32s2"]

defmt = ["dep:defmt", "defmt-or-log/defmt", "esp-phy/defmt"]
log = ["dep:log", "defmt-or-log/log", "esp-phy/log-04"]
critical_section = []
