[package]
name = "examples"
version = "0.1.0"
authors = ["Frostie314159 <frostie.neuenhausen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]

esp-wifi-hal = { path = "../esp-wifi-hal/", features = ["log"] }

# ESP-HAL dependencies
esp-hal = { version = "1.0.0-rc.1", features = ["unstable"] }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.0", features = ["panic-handler", "println"] }

# Embassy dependencies

# Misc
log = "0.4.21"
static_cell = { version = "2.1.0" }
ieee80211 = { path = "../../../rust/ieee80211/" }
embedded-io-async = "0.7.0"
embassy-futures = "0.1.1"
embassy-executor = "0.9.1"
embassy-time = "0.5.0"
embassy-sync = "0.7.2"
rand_core = "0.9.3"
embedded-io = "0.7.1"
esp-rtos = { version = "0.1.0", features = ["embassy"] }
esp-println = { version = "0.16.0", features = ["log-04"] }
esp-bootloader-esp-idf = "0.3.0"

[features]
esp32 = [
    "esp-wifi-hal/esp32",
    "esp-hal/esp32",
    "esp-rtos/esp32",
    "esp-backtrace/esp32",
    "esp-bootloader-esp-idf/esp32"
]
esp32s2 = [
    "esp-wifi-hal/esp32s2",
    "esp-hal/esp32s2",
    "esp-rtos/esp32s2",
    "esp-backtrace/esp32s2",
    "esp-bootloader-esp-idf/esp32s2"
]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
